# poise-android

./: .gitignore  LEGACY_MODEL.md  README.md  build.gradle.kts  crash_log.txt  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  poise_processor.cpp  poise_processor.h  resampler.cpp  resampler.h  stft.cpp  stft.h  vad.cpp  vad.h
app/src/main/java/com/poise/android/: MainActivity.kt
app/src/main/java/com/poise/android/audio/: AudioPipeline.kt  GTCRNProcessor.kt  PoiseProcessor.kt  ProcessingStats.kt
app/src/main/java/com/poise/android/service/: AudioCaptureService.kt  AudioServiceState.kt
app/src/main/java/com/poise/android/ui/: MainScreen.kt
app/src/main/java/com/poise/android/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background_gradient.xml  ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
